@@ -1,5 +1,9 @@
 2007-12-06  Badlop  <badlop@process-one.net>
 
+	* src/web/ejabberd_http.erl: Change loglevel for http
+	queries (EJAB-363)
+	* src/web/ejabberd_web_admin.erl: Likewise
+
 	* doc/guide.tex: Add mod_caps and improve mod_pubsub documentation
 	* src/ejabberd.cfg.example: Added mod_caps enabled by default
 
